...
                  bottom: Radius.circular(25),
                ),
              ),
              child: Row(
                mainAxisAlignment: MainAxisAlignment.center,
                children: [
                  Text("Tap to see meaning"),
                  Icon(Icons.arrow_forward),
                ],
              ),
            ),
          ),
        ],
...
              minWidth: double.minPositive,
              child: Row(
                spacing: 8,
                children: [
                  Icon(Icons.check, color: Colors.green),
                  Text(
                    "I knew this word",
                    style: TextStyle(color: Colors.green),
                  ),
                ],
              ),
            ),
            MaterialButton(
...
